# google_adk_ollama_project

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: explanation.md
.github/workflows/: doc_deploy.yml
basic_agent/: explanation.md  main.py
basic_agent/greeting_agent/: agent.py  prompt.py
basic_agent_fastapi/: explanation.md  explanation_test.md  main.py  main_without_basemodel.py
basic_agent_fastapi/greeting_agent/: prompt.py
basic_agent_fastapi/test/: test_basic_agent_api.py
docs/: faq.md  index.md  new.md  project-overview.md
faq/: index.html
other/: 1.py  2.py
project-overview/: index.html
reasoning_agent_api/: main.py
reasoning_agent_api/reasoning_agent/: prompt.py
reasoning_agent_api_planReact/: main.py
reasoning_agent_api_planReact/reasoning_agent/: agent.py  model.py  prompt.py
reasoning_agent_builtinplanner/: main.py
reasoning_agent_builtinplanner/reasoning_agent/: agent.py  prompt.py
reasoning_agent_tool_api/: main.py
reasoning_agent_tool_api/reasoning_agent_tool/: agent.py  prompt.py  reasoning_agent.py
search/: search_index.json
